--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "contentful": "^9.1.4",
+    "framer-motion": "^5.2.0",
     "next": "12.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.32.2",
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "eslint": "7",
