--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -19,7 +19,6 @@
   },
   "devDependencies": {
     "eslint": "7",
-    "eslint-config-next": "12.0.1",
-    "webpack": "^5.62.1"
+    "eslint-config-next": "12.0.1"
   }
 }
