--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "portfolio",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,16 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "contentful": "^9.1.4",
-    "framer-motion": "^5.2.0",
-    "next": "12.0.1",
+    "@chakra-ui/react": "^1.7.2",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^4",
+    "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-intersection-observer": "^8.32.2",
-    "sass": "^1.43.4"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "7",
-    "eslint-config-next": "12.0.1"
+    "eslint-config-next": "12.0.4"
   }
 }
