--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/inter": "^4.5.1",
+    "contentful": "^9.1.4",
+    "date-fns": "^2.26.0",
     "framer-motion": "^4",
     "next": "12.0.4",
     "react": "17.0.2",
