--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/fira-code": "^4.5.2",
+    "@fontsource/inter": "^4.5.1",
     "contentful": "^9.1.5",
     "framer-motion": "^5.4.5",
     "next": "12.0.7",
