--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "contentful": "^9.1.5",
     "framer-motion": "^5.4.5",
     "next": "12.0.7",
+    "next-seo": "^4.28.1",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
