--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,23 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.10.0",
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
-    "@fontsource/fira-code": "^4.5.2",
-    "@fontsource/inter": "^4.5.1",
-    "contentful": "^9.1.5",
-    "framer-motion": "^5.4.5",
-    "next": "12.0.7",
-    "next-seo": "^4.28.1",
-    "normalize.css": "^8.0.1",
+    "@contentful/rich-text-react-renderer": "^15.11.1",
+    "contentful": "^9.1.13",
+    "framer-motion": "^6.2.8",
+    "next": "12.1.0",
+    "next-themes": "^0.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.3.0",
-    "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7"
+    "autoprefixer": "^10.4.3",
+    "eslint": "8.11.0",
+    "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.11",
+    "tailwindcss": "^3.0.23"
   }
 }
