--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.11.1",
+    "@fullpage/react-fullpage": "^0.1.23",
     "contentful": "^9.1.13",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
-    "next-themes": "^0.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
