--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "contentful": "^9.1.13",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
+    "nextjs-progressbar": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-intersection-observer": "^9.1.0"
+    "react-intersection-observer": "^9.1.0",
+    "react-timeago": "^6.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.3",
