--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.11.1",
-    "@fullpage/react-fullpage": "^0.1.23",
-    "contentful": "^9.1.13",
-    "framer-motion": "^6.2.8",
-    "next": "12.1.0",
-    "nextjs-progressbar": "^0.0.14",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
-    "react-intersection-observer": "^9.1.0",
-    "react-timeago": "^6.2.1"
+    "@next/font": "13.1.6",
+    "@types/node": "18.13.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.10",
+    "contentful": "^9.3.2",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
+    "framer-motion": "^9.0.2",
+    "next": "13.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "typescript": "4.9.5"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.3",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
-    "postcss": "^8.4.11",
-    "tailwindcss": "^3.0.23"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6"
   }
 }
