--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "contentful-typescript-codegen --output @types/generated/contentful.d.ts"
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -25,7 +26,11 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "contentful-management": "^10.29.1",
+    "contentful-typescript-codegen": "^3.4.0",
+    "dotenv": "^16.0.3",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
     "tailwindcss": "^3.2.6"
   }
 }
